# course-multilingual-technologies

./: README.md  course-multilingual-technologies.cabal  default.nix  index.html
article/: 00-syllabus.html  Mongolian_transliteration.html  armenian-sentiment-analysis.html  first-post.html  nlp_models_for_aragonese.html  oto-morph.html  scriptkey_megd.html  shanghainese-to-mandarin.html  tibetan_machine_translation.html
content/: Mongolian_transliteration.md  armenian-sentiment-analysis.md  nlp_models_for_aragonese.md  oto-morph.md  scriptkey_megd.md  shanghainese-to-mandarin.md  tibetan_machine_translation.md
src/: Main.hs
