cabal-version: 2.4
name: course-multilingual-technologies
version: 0.1.0.0
license: BSD-3-Clause
maintainer: jonathan@jonreeve.com
author: Jonathan Reeve
category: Web

executable rib-sample
    main-is: Main.hs
    hs-source-dirs: src
    default-language: Haskell2010
    ghc-options:
        -Wall
        -Wincomplete-record-updates
        -Wincomplete-uni-patterns
    build-depends:
        base,
        aeson,
        clay,
        lucid,
        filepath,
        mtl,
        relude,
        rib ^>=1.0,
        rib-core ^>=1.0,
        shake,
        text,
        pandoc,
        with-utf8
